--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
